--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -305,6 +305,7 @@ header .icons #menu-bars {
   gap: 1rem;
   flex: 1 1 17rem;
   padding: 1.5rem 1rem;
+  cursor: pointer;
 }
 .about .row .content .icons-container .icons i {
   font-size: 2.5rem;
@@ -381,53 +382,151 @@ header .icons #menu-bars {
   margin-left: 1rem;
   font-size: 2.5rem;
 }
-.review .swiper-container{
-    overflow: hidden;
+.review .swiper-container {
+  overflow: hidden;
 }
 .review .slide {
-    padding: 2rem;
-    box-shadow: var(--box-shadow);
-    border: .1rem solid rgba(0, 0, 0, .2);
-    border-radius: .5rem;
-    position: relative;
+  padding: 2rem;
+  box-shadow: var(--box-shadow);
+  border: 0.1rem solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.5rem;
+  position: relative;
 }
 .review .slide .fa-quote-right {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-    font-size: 6rem;
-    color: #ccc;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  font-size: 6rem;
+  color: #ccc;
 }
 
 .review .slide .user {
-    display: flex;
-    gap: 1.5rem;
-    align-items: center;
-    padding-bottom: 1.5rem;
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+  padding-bottom: 1.5rem;
 }
 
 .review .slide .user img {
-    height: 7rem;
-    width: 7rem;
-    border-radius: 50%;
-    object-fit: cover;
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .review .slide .user h3 {
-    color: var(--black);
-    font-size: 2rem;
-    padding-bottom: .5rem;
+  color: var(--black);
+  font-size: 2rem;
+  padding-bottom: 0.5rem;
 }
 
 .review .slide .user i {
-    font-size: 1.3rem;
-    color: var(--green);
+  font-size: 1.3rem;
+  color: var(--green);
 }
 
 .review .slide p {
-    font-size: 1.5rem;
-    line-height: 1.8;
-    color: var(--light-color);
+  font-size: 1.5rem;
+  line-height: 1.8;
+  color: var(--light-color);
+}
+.order form {
+  max-width: 90rem;
+  border-radius: 0.5rem;
+  box-shadow: var(--box-shadow);
+  border: 0.1rem solid rgba(0, 0, 0, 0.2);
+  background: #fff;
+  padding: 1.5rem;
+  margin: 0 auto;
+}
+.order form .inputbox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.order form .inputbox .input {
+  width: 49%;
+}
+.order form .inputbox .input span {
+  display: block;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
+  color: var(--light-color);
+}
+.order form .inputbox .input input,
+.order form .inputbox .input textarea {
+  background: #eee;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  font-size: 1.6rem;
+  color: var(--black);
+  text-transform: none;
+  margin-bottom: 1rem;
+  width: 100%;
+  border: 0.1rem solid transparent;
+}
+.order form .inputbox .input input:focus,
+.order form .inputbox .input textarea:focus {
+  border: 0.1rem solid var(--green);
+}
+.order form .inputbox .input textarea {
+  height: 20rem;
+  resize: none;
+}
+.order form .btn {
+  margin-top: 0;
+}
+.footer .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 1.5rem;
+}
+.footer .box-container .box h3{
+  padding: .5rem 0;
+  font-size: 2.5rem;
+  color: var(--black);
+}
+.footer .box-container .box a{
+  display: block;
+  padding: .5rem 0;
+  font-size: 1.5rem;
+  color: var(--light-color);
+}
+.footer .box-container .box a:hover{
+  color: var(--green);
+  text-decoration: underline;
+  padding-left: .5rem;
+}
+.footer .credit{
+  text-align: center;
+  border-top: .1rem solid rgba(0, 0, 0, 0.1);
+  font-size: 2rem;
+  color: var(--black);
+  padding: .5rem;
+  padding-top: 1.5rem;
+  margin-top: 1.5rem;
+}
+.footer .credit span{
+  color: var(--green);
+}
+.loader-container{
+  position: fixed;
+  top: 0;left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10000;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.loader-container img{
+  width: 35rem;
+}
+.loader-container.fade-out{
+  top: 110%;
+  opacity: 0;
 }
 /* media queris */
 
@@ -478,12 +577,15 @@ header .icons #menu-bars {
     font-size: 5rem;
   }
 }
-@media (max-width: 991px) {
+@media (max-width: 450px) {
   html {
     font-size: 50%;
   }
   .dishes .box-container .box img {
     height: auto;
+    width: 100%;
+  }
+  .order form .inputbox .input {
     width: 100%;
   }
 }
